Changed project name from leetcode to python_practice

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "leetcode"
+name = "pythonb_practice"
 version = "0.1.0"
 description = ""
 authors = ["Aditya Gudimella <aditya.gudimella@gmail.com>"]
