--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+hypothesis = "^5.1.0"
+pyhamcrest = "^1.9.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
